Improve Cloud UI docs: rename to action-based slugs, remove em-dashes, deduplicate content
- Rename all 9 Cloud UI pages to action-based slugs (e.g. workflow-editor → build-a-workflow, discover-page → run-a-task)
- Remove em-dashes across all Cloud UI pages (43 instances)
- Deduplicate parameter types table in run-a-workflow and common fields tables in build-a-workflow
- Fix link target from running-workflows to live-execution in tutorial
- Merge "Running Tasks" nav group into "Getting Started"
- Add tutorial images for workflow editor walkthrough
- Update all internal cross-references to new slugs

--- a/docs/cloud/manage-workflows.mdx
+++ b/docs/cloud/manage-workflows.mdx
@@ -1,10 +1,10 @@
 ---
 title: Managing Workflows
 subtitle: Create, organize, clone, import, and export reusable automations
-slug: cloud/workflows-list
+slug: cloud/manage-workflows
 ---
 
-The **Workflows** page is where you build and manage multi-step automations. Each workflow is a reusable sequence of blocks that you can run with different inputs each time.
+Once you've [built a workflow](/cloud/build-a-workflow), the **Workflows** page is where you organize, share, and manage them. Each workflow is a reusable sequence of blocks that you can run with different inputs each time.
 
 Click **Workflows** in the left sidebar to open it.
 
@@ -25,19 +25,6 @@ The table lists all workflows in your organization with the following columns:
 | **Actions** | Inline buttons and three-dot menu |
 
 Each row also has inline action buttons: folder assignment, parameter toggle, open in editor (pencil icon), run (play icon), and a three-dot menu for additional actions.
-
----
-
-## Creating a workflow
-
-Click the **Create** dropdown button at the top right of the table.
-
-| Option | What it does |
-|--------|-------------|
-| **Blank Workflow** | Creates a new empty workflow and opens it in the [editor](/cloud/workflow-editor) |
-| **From Template** | Opens a dialog showing organization templates to start from |
-
-<img src="/images/cloud/create-workflow-dropdown.png" alt="Create workflow dropdown" />
 
 ---
 
@@ -105,14 +92,14 @@ Upload a PDF of your Standard Operating Procedure and Skyvern generates a workfl
   <Card
     title="Open the Editor"
     icon="pen-to-square"
-    href="/cloud/workflow-editor"
+    href="/cloud/build-a-workflow"
   >
     Build automations visually with the drag-and-drop canvas
   </Card>
   <Card
     title="Add Parameters"
     icon="sliders"
-    href="/cloud/workflow-parameters"
+    href="/cloud/add-parameters"
   >
     Make workflows reusable with dynamic input values
   </Card>
