--- a/docs/cloud/run-your-first-task.mdx
+++ b/docs/cloud/run-your-first-task.mdx
@@ -1,6 +1,6 @@
 ---
 title: Your First Task
-slug: cloud/your-first-task
+slug: cloud/run-your-first-task
 subtitle: Run a browser automation from start to finish
 ---
 
