--- a/docs/cloud/add-parameters.mdx
+++ b/docs/cloud/add-parameters.mdx
@@ -1,7 +1,7 @@
 ---
 title: Workflow Parameters
 subtitle: Pass dynamic values into your workflows at runtime
-slug: cloud/workflow-parameters
+slug: cloud/add-parameters
 ---
 
 Parameters let you create reusable workflows that accept different input values each time they run. Instead of hardcoding a URL or search term into a block, reference a parameter and fill in the value when you run the workflow.
@@ -10,7 +10,7 @@ Parameters let you create reusable workflows that accept different input values 
 
 ## Opening the parameters panel
 
-In the [workflow editor](/cloud/workflow-editor), click the **Parameters** button in the header bar. A panel appears below the header showing all defined parameters and controls to add new ones.
+In the [workflow editor](/cloud/build-a-workflow), click the **Parameters** button in the header bar. A panel appears below the header showing all defined parameters and controls to add new ones.
 
 <img src="/images/cloud/parameters-panel-open.png" alt="Parameters panel" />
 
@@ -25,7 +25,7 @@ Click **Add Parameter** in the panel. Two types are available:
 | **Input Parameter** | Values the user provides when running the workflow (text, numbers, JSON, etc.) |
 | **Credential Parameter** | Securely inject login credentials from a vault (Bitwarden, 1Password, Azure, AWS, or Skyvern) |
 
-Each parameter requires a unique **key** — the name you use to reference it in blocks. Keys cannot contain spaces and cannot use [reserved names](#reserved-variables).
+Each parameter requires a unique **key**. This is the name you use to reference it in blocks. Keys cannot contain spaces and cannot use [reserved names](#reserved-variables).
 
 You can also add an optional **description** (shown as help text when running) and a **default value**.
 
@@ -108,7 +108,7 @@ The syntax uses the block's label (lowercased, spaces replaced with underscores)
 {{ login_output.success }}
 ```
 
-This is how you chain data between blocks — extract data in one block, then use it in the next.
+This is how you chain data between blocks. Extract data in one block, then use it in the next.
 
 ---
 
@@ -139,14 +139,14 @@ Process item {{ current_index }}: {{ current_value.name }}
   <Card
     title="Block Reference"
     icon="cube"
-    href="/cloud/block-configuration"
+    href="/cloud/configure-blocks"
   >
     Configuration fields for every block type
   </Card>
   <Card
     title="Run Your Workflow"
     icon="play"
-    href="/cloud/running-workflows"
+    href="/cloud/run-a-workflow"
   >
     Execute workflows and fill in parameter values
   </Card>
