--- a/docs/cloud/monitor-a-run.mdx
+++ b/docs/cloud/monitor-a-run.mdx
@@ -1,10 +1,10 @@
 ---
 title: Watching Live Execution
 subtitle: Monitor, interact with, and control running tasks
-slug: cloud/live-execution
+slug: cloud/monitor-a-run
 ---
 
-When you run a task from the [Discover page](/cloud/discover-page), you're taken to the live execution screen where you can watch the browser in real time.
+When you run a task from the [Discover page](/cloud/run-a-task), you're taken to the live execution screen where you can watch the browser in real time.
 
 <img src="/images/cloud/live-execution-overview.png" alt="Live execution screen" />
 
@@ -30,10 +30,10 @@ The live browser stream is active while the task is still in progress:
 |--------|-----------|
 | `created` | Waiting to start |
 | `queued` | Waiting for a browser |
-| `running` | **Active** — the browser is navigating |
+| `running` | **Active**: the browser is navigating |
 | `paused` | Waiting for human interaction |
-| `completed` | Stream closed — view the recording instead |
-| `failed` | Stream closed — view the recording instead |
+| `completed` | Stream closed. View the recording instead. |
+| `failed` | Stream closed. View the recording instead. |
 | `terminated` | Stream closed |
 | `timed_out` | Stream closed |
 | `canceled` | Stream closed |
@@ -49,7 +49,7 @@ The **Take Control** button lets you interact directly with the browser. This is
 - The site has an unusual login flow
 - You need to navigate past an unexpected popup
 
-Click **Take Control** to start interacting — your mouse and keyboard input goes directly to the browser. Click **Stop Controlling** to hand control back to the AI.
+Click **Take Control** to start interacting. Your mouse and keyboard input goes directly to the browser. Click **Stop Controlling** to hand control back to the AI.
 
 <Warning>
 Taking control pauses the AI agent. Remember to release control so the agent can resume.
@@ -71,10 +71,10 @@ Once a task finishes, open it from **Runs** to see the full results.
 
 Step-by-step breakdown of every action the AI took. Each entry shows:
 
-- **Action type** — Click, Type, Scroll, Select, etc.
+- **Action type**: Click, Type, Scroll, Select, etc.
 - **Success or failure** indicator
-- **AI reasoning** — Why the agent chose this action
-- **Input details** — For type actions, the text that was entered
+- **AI reasoning**: Why the agent chose this action
+- **Input details**: For type actions, the text that was entered
 
 ### Recording tab
 
@@ -87,6 +87,6 @@ The configuration you submitted: URL, prompt, engine, proxy location, webhook UR
 ### Diagnostics tab
 
 Debug information for troubleshooting:
-- **LLM prompts** — The exact prompts sent to the AI model
-- **Element trees** — The DOM structure the AI analyzed
-- **Annotated screenshots** — Screenshots with element labels the AI used for decisions
+- **LLM prompts**: The exact prompts sent to the AI model
+- **Element trees**: The DOM structure the AI analyzed
+- **Annotated screenshots**: Screenshots with element labels the AI used for decisions
