--- a/docs/cloud/overview.mdx
+++ b/docs/cloud/overview.mdx
@@ -1,10 +1,10 @@
 ---
 title: UI Overview
-slug: cloud/ui-overview
+slug: cloud/overview
 subtitle: Navigate the Skyvern Cloud dashboard
 ---
 
-Skyvern Cloud ([app.skyvern.com](https://app.skyvern.com)) lets you automate any website from your browser. Describe what you want in plain English, watch an AI-powered browser do it live, and get structured results back — no code required.
+Skyvern Cloud ([app.skyvern.com](https://app.skyvern.com)) lets you automate any website from your browser. Describe what you want in plain English, watch an AI-powered browser do it live, and get structured results back. No code required.
 
 <Note>
 Looking to integrate Skyvern into your own app? See the [API Quickstart](/getting-started/quickstart) instead.
@@ -12,7 +12,7 @@ Looking to integrate Skyvern into your own app? See the [API Quickstart](/gettin
 
 ## The dashboard
 
-Sign in and you'll land on the **Discover** page — the starting point for running automations.
+Sign in and you'll land on the **Discover** page, the starting point for running automations.
 
 <img src="/images/cloud/skyvern-cloud-discover.png" alt="Skyvern Cloud dashboard showing the Discover page" />
 
@@ -34,7 +34,7 @@ Where you create and monitor automations.
 {/* TODO: Replace with screenshot of Agents section */}
 <img src="/images/cloud/placeholder-agents-section.png" alt="Agents page showing pre-built automation templates" />
 
-Ready-made automation templates. Each agent is preconfigured with a prompt, target URL, and settings — pick one to see it work or use it as a starting point for your own task.
+Ready-made automation templates. Each agent is preconfigured with a prompt, target URL, and settings. Pick one to see it work or use it as a starting point for your own task.
 
 ### General
 
@@ -50,10 +50,10 @@ Every automation in Skyvern Cloud follows the same pattern:
 
 <Steps>
   <Step title="Describe your task">
-    Type what you want into the prompt bar — include the target URL and your instructions in one go. Something like "Get the top post from https://news.ycombinator.com" or "Fill out the contact form at https://example.com/contact with my details."
+    Type what you want into the prompt bar. Include the target URL and your instructions in one go. Something like "Get the top post from https://news.ycombinator.com" or "Fill out the contact form at https://example.com/contact with my details."
   </Step>
   <Step title="Watch it happen">
-    A cloud browser opens and you see it navigate in real time. Pages load, elements highlight, actions fire. An agent log streams the AI's reasoning — every Thought and Decision — so you can follow along. If the AI gets stuck, hit **Take Control** to jump in and help.
+    A cloud browser opens and you see it navigate in real time. Pages load, elements highlight, actions fire. An agent log streams the AI's reasoning, showing every Thought and Decision, so you can follow along. If the AI gets stuck, hit **Take Control** to jump in and help.
   </Step>
   <Step title="Get your results">
     Extracted data appears as structured JSON on the run detail page. Every run also includes an output view, full recording, the parameters you submitted, and auto-generated code to reproduce the task via API.
@@ -70,7 +70,7 @@ That's it. The next guide walks you through this flow with a real example.
   <Card
     title="Run Your First Task"
     icon="play"
-    href="/cloud/your-first-task"
+    href="/cloud/run-your-first-task"
   >
     Follow along with a real example to see Skyvern Cloud in action
   </Card>
