--- a/docs/cloud/run-a-workflow.mdx
+++ b/docs/cloud/run-a-workflow.mdx
@@ -1,41 +1,25 @@
 ---
 title: Running Workflows
 subtitle: Execute workflows, fill parameters, and track status
-slug: cloud/running-workflows
+slug: cloud/run-a-workflow
 ---
 
 Once you've built and saved a workflow, you can run it from the editor or the workflows list. Each run creates an independent execution with its own status, logs, and output.
-
----
 
 ## Starting a run
 
 Two ways to start:
 
-1. **From the editor** — Click the **Run** button (play icon) in the header bar. The editor saves your workflow first.
-2. **From the workflows list** — Click the **play icon** on the workflow's row.
+1. **From the editor**: Click the **Run** button (play icon) in the header bar. The editor saves your workflow first.
+2. **From the workflows list**: Click the **play icon** on the workflow's row.
 
 Both take you to the parameters page where you fill in runtime values before the run starts.
 
 
----
-
 ## Filling in parameters
 
-The parameters page shows all [workflow parameters](/cloud/workflow-parameters) defined in the editor. Fill in a value for each one, or leave them at their defaults.
+The parameters page shows all [workflow parameters](/cloud/add-parameters) defined in the editor. Fill in a value for each one, or leave them at their defaults. Parameters without defaults must be filled in before running.
 
-| Parameter type | Input control |
-|----------------|---------------|
-| **String** | Text field |
-| **Integer** / **Float** | Number field |
-| **Boolean** | Toggle switch |
-| **JSON** | Code editor |
-| **File URL** | Text field (paste a URL) |
-| **Credential ID** | Dropdown showing your stored credentials |
-
-If a parameter has a default value, it's pre-filled. Parameters without defaults must be filled in before running.
-
----
 
 ## Run settings
 
@@ -53,9 +37,9 @@ Below the parameters, you can configure settings for this specific run:
 
 ## Monitoring a run
 
-After clicking **Run**, you're taken to the live execution view — the same interface described in [Watching Live Execution](/cloud/live-execution).
+After clicking **Run**, you're taken to the live execution view, the same interface described in [Watching Live Execution](/cloud/monitor-a-run).
 
-For workflows, the left panel also shows a **block timeline** — a list of all blocks in the workflow. Completed blocks show a checkmark. The currently executing block is highlighted.
+For workflows, the left panel also shows a **block timeline**: a list of all blocks in the workflow. Completed blocks show a checkmark. The currently executing block is highlighted.
 
 <img src="/images/cloud/workflow-run-timeline.png" alt="Workflow run block timeline" />
 
@@ -80,11 +64,11 @@ For workflows, the left panel also shows a **block timeline** — a list of all 
 
 After a run completes, open it from **Runs** in the sidebar. The run detail page shows:
 
-- **Block-by-block results** — Each block's output, status, and execution time
-- **Recording** — Full video replay of the browser session
-- **Parameters** — The values you submitted for this run
+- **Block-by-block results**: Each block's output, status, and execution time
+- **Recording**: Full video replay of the browser session
+- **Parameters**: The values you submitted for this run
 
-See [Reviewing results](/cloud/live-execution#reviewing-results) for details on the Actions, Recording, Parameters, and Diagnostics tabs.
+See [Reviewing results](/cloud/monitor-a-run#reviewing-results) for details on the Actions, Recording, Parameters, and Diagnostics tabs.
 
 ---
 
@@ -98,8 +82,8 @@ Click the **Cancel** button during execution. A confirmation dialog appears. The
 
 Access past runs from two places:
 
-1. **Runs** in the left sidebar — shows all runs across all workflows
-2. **History** button (clock icon) in the workflow editor — shows runs for this specific workflow
+1. **Runs** in the left sidebar: shows all runs across all workflows
+2. **History** button (clock icon) in the workflow editor: shows runs for this specific workflow
 
 ---
 
@@ -109,14 +93,14 @@ Access past runs from two places:
   <Card
     title="Build a Workflow"
     icon="pen-to-square"
-    href="/cloud/workflow-editor"
+    href="/cloud/build-a-workflow"
   >
     Create and edit workflows in the visual editor
   </Card>
   <Card
     title="Block Reference"
     icon="cube"
-    href="/cloud/block-configuration"
+    href="/cloud/configure-blocks"
   >
     Configuration fields for every block type
   </Card>
