Rewrite integration pages: tighter writing, visual polish
- Remove fluff intros, filler lines, and duplicate engine descriptions
- Replace all tables with bullet lists for scanability
- Remove horizontal rule separators throughout
- Wrap setup steps in <Steps> component (Mintlify timeline)
- Wrap images/videos in <Frame> for consistent borders
- Add concise 2-line intro to each page
- Separate setup walkthrough from field reference
- Fix broken Next steps links (/cloud/manage-workflows, /going-to-production/webhooks)
- Fix API key links to /settings/api-keys
- Fix n8n step numbering (was 1→2→5, now sequential)
- Normalize engine names to bold (Skyvern 1.0/2.0) instead of backticks
- Remove confusing COMPLETE/TERMINATE jargon from field descriptions

--- a/docs/integrations/workato.mdx
+++ b/docs/integrations/workato.mdx
@@ -4,125 +4,99 @@ subtitle: Run browser automations in your Workato recipes
 slug: integrations/workato
 ---
 
-The Skyvern Workato integration lets you connect Skyvern with Workato's enterprise automation platform.
-
-Use it to trigger browser automation jobs from other tools, or to send Skyvern results into other apps.
-
----
-
-## What you'll need
-
-- A Skyvern Cloud API key from [Settings](https://app.skyvern.com/settings)
-
----
+Connect Skyvern to Workato's enterprise automation platform. Trigger browser automations from any recipe, or route Skyvern's results into downstream actions.
 
 ## Available Actions
 
-Actions are steps your recipe performs to interact with Skyvern.
+- **Create and Run Task** — Run an automation using **Skyvern 1.0** (simple, single-step goals)
+- **Create and Run Task V2** — Run an automation using **Skyvern 2.0** (complex, multi-step goals)
+- **Run a Workflow** — Run a pre-built Skyvern workflow with parameters
+- **Get Task / Get Task V2** — Retrieve results from a previously run task
+- **Get Workflow** — Retrieve results from a previously run workflow
 
-| Action | Use this to |
-|--------|-------------|
-| Create and Run Task | Run an automation using the `skyvern-1.0` engine. Best for simple tasks like filling a form or searching for information. |
-| Create and Run Task V2 | Run an automation using the `skyvern-2.0` engine. Best for complex, multi-step goals with dynamic planning. |
-| Run a Workflow | Run a pre-built Skyvern workflow by selecting from available workflows and providing dynamic parameters. |
-| Get Task | Retrieve the details of a previously run task (v1). |
-| Get Task V2 | Retrieve the details of a previously run task (v2). |
-| Get Workflow | Retrieve the details of a previously run workflow. |
+## Setup
 
----
+<Steps>
+  <Step title="Install the connector">
+    Go to the Community Library tab, search for "Skyvern" under custom connectors, and click **Install** → "release latest version".
 
-## Step 1: Install the connector
+    <Frame>
+      <img src="/images/workato/s1img1.png" alt="Search for Skyvern in Workato Community Library" />
+    </Frame>
+    <Frame>
+      <img src="/images/workato/s1img2.png" alt="Skyvern connector page in Workato" />
+    </Frame>
+  </Step>
 
-1. Go to the Community Library tab in Workato
-2. Search for "Skyvern" under custom connectors
-3. Click **Install** and select "release latest version"
+  <Step title="Add Skyvern to your recipe">
+    Create a new recipe or edit an existing one, add an action, and search for "Skyvern".
 
-<img src="/images/workato/s1img1.png" alt="Search for Skyvern in Workato Community Library" />
-<img src="/images/workato/s1img2.png" alt="Skyvern connector page in Workato" />
-<img src="/images/workato/s1img3.png" alt="Install latest version of Skyvern connector" />
+    <Frame>
+      <img src="/images/workato/s1img4.png" alt="Add Skyvern action to Workato recipe" />
+    </Frame>
+    <Frame>
+      <img src="/images/workato/s1img6.png" alt="List of available Skyvern actions in Workato" />
+    </Frame>
+  </Step>
 
----
+  <Step title="Connect your account">
+    Paste your API key from [Settings](https://app.skyvern.com/settings/api-keys) and save the connection.
 
-## Step 2: Add Skyvern to your recipe
+    <Frame>
+      <img src="/images/workato/s1img7.png" alt="Connect Skyvern account in Workato" />
+    </Frame>
+  </Step>
 
-1. Create a new recipe or edit an existing one
-2. Add an action and search for "Skyvern"
-3. Select the action you want to use
+  <Step title="Configure">
+    Fill in the fields for your chosen action. See the field reference below.
+  </Step>
 
-<img src="/images/workato/s1img4.png" alt="Add Skyvern action to Workato recipe" />
-<img src="/images/workato/s1img5.png" alt="Select Skyvern action type in Workato" />
-<img src="/images/workato/s1img6.png" alt="List of available Skyvern actions in Workato" />
+  <Step title="Test">
+    Click **Save** then **Test recipe** and monitor progress in your [Skyvern dashboard](https://app.skyvern.com).
 
----
+    <Frame>
+      <img src="/images/workato/s3img1.png" alt="Test Workato recipe with Skyvern" />
+    </Frame>
+  </Step>
+</Steps>
 
-## Step 3: Connect your account
-
-1. Get your API key from [Settings](https://app.skyvern.com/settings)
-2. Create a new connection in Workato and paste the key
-
-<img src="/images/workato/s1img7.png" alt="Connect Skyvern account in Workato" />
-
----
-
-## Step 4: Set configuration fields
-
-Configuration varies by action type.
+## Field reference
 
 ### Create and Run a Task
 
-Both task actions use the same configuration fields. The difference is the underlying engine:
-
-- **Create and Run Task** uses `skyvern-1.0` — optimized for simple, single-step goals
-- **Create and Run Task V2** uses `skyvern-2.0` — uses dynamic planning for complex, multi-step goals
-
-| Field | Required | Description |
-|-------|----------|-------------|
-| URL | Yes | The starting page for the automation. |
-| Navigation Goal | Often | What Skyvern should do on the page. End with "COMPLETE" when done or "TERMINATE" to stop. Omit if only extracting data. |
-| Data Extraction Goal | No | What data to extract after navigation completes. Be specific about what to return. |
-| Navigation Payload | No | JSON object with input data for forms. Use this to run the same task with different data. |
-| Extracted Information Schema | No | JSON schema specifying how extracted data should be formatted. |
-| Webhook Callback URL | No | URL to notify when Skyvern finishes executing. |
-| Max Steps | No | Limit the number of steps to control costs. |
+- **URL** (required) — The starting page for the automation
+- **Navigation Goal** — What Skyvern should do on the page. Omit if only extracting data.
+- **Data Extraction Goal** — What data to pull from the page
+- **Navigation Payload** — JSON input data for forms. Lets you reuse the same task with different data.
+- **Extracted Information Schema** — JSON schema defining the shape of extracted data
+- **Webhook Callback URL** — URL to notify when the task finishes
+- **Max Steps** — Cap the number of steps to control costs
 
 <Note>
-The navigation goal describes what to do *after* loading the URL. Don't include "go to website X" in the navigation goal—use the URL field instead.
+The navigation goal describes what to do *after* loading the URL. Don't include "go to website X" — use the URL field instead.
 </Note>
 
-<img src="/images/workato/s2img1.png" alt="Configure task fields in Workato - URL and navigation goal" />
-<img src="/images/workato/s2img2.png" alt="Configure task fields in Workato - additional options" />
+<Frame>
+  <img src="/images/workato/s2img1.png" alt="Configure task fields in Workato" />
+</Frame>
 
 ### Run a Workflow
 
 First, create your workflow in the [Skyvern UI](https://app.skyvern.com).
 
-| Field | Required | Description |
-|-------|----------|-------------|
-| Workflow | Yes | Select the workflow you want to run from the dropdown. |
-| Parameters | Depends | Fill in any parameters defined in your workflow. Skip if your workflow uses fixed values. |
+- **Workflow** (required) — Select the workflow to run
+- **Parameters** — Fill in any parameters defined in your workflow
 
-<img src="/images/workato/s5img1.png" alt="Select workflow in Workato" />
-<img src="/images/workato/s5img2.png" alt="Configure workflow parameters in Workato" />
+<Frame>
+  <img src="/images/workato/s5img1.png" alt="Select workflow in Workato" />
+</Frame>
 
 ### Get Task / Workflow
 
-Use these actions to retrieve the details of a previous run into your recipe. The run must have already completed.
+Retrieve the details of a completed run.
 
-| Field | Required | Description |
-|-------|----------|-------------|
-| Task ID | Yes | The ID of the task run. Starts with `tsk_`. |
-| Workflow Run ID | Yes | The ID of the workflow run. Starts with `wr_`. |
-
----
-
-## Step 5: Test
-
-Click **Save** then **Test recipe** to run the flow. Monitor progress in your [Skyvern dashboard](https://app.skyvern.com).
-
-<img src="/images/workato/s3img1.png" alt="Test Workato recipe with Skyvern" />
-<img src="/images/workato/s3img2.png" alt="Workato recipe test results" />
-
----
+- **Task ID** (required) — Starts with `tsk_`
+- **Workflow Run ID** (required) — Starts with `wr_`
 
 ## Next steps
 
@@ -130,14 +104,14 @@ Click **Save** then **Test recipe** to run the flow. Monitor progress in your [S
   <Card
     title="Build Workflows"
     icon="diagram-project"
-    href="/workflows/manage-workflows"
+    href="/cloud/manage-workflows"
   >
     Create reusable multi-step automations in Skyvern
   </Card>
   <Card
     title="Use Webhooks"
     icon="webhook"
-    href="/running-tasks/webhooks-faq"
+    href="/going-to-production/webhooks"
   >
     Get notified when tasks complete
   </Card>
