--- a/docs/integrations/make.mdx
+++ b/docs/integrations/make.mdx
@@ -4,128 +4,101 @@ subtitle: Integrate browser automations into Make scenarios
 slug: integrations/make
 ---
 
-The Skyvern Make.com integration lets you connect Skyvern with Make's library of 1,500+ apps.
-
-Use it to trigger browser automation jobs from other tools, or to send Skyvern results into other apps.
-
----
-
-## What you'll need
-
-- A Skyvern Cloud API key from [Settings](https://app.skyvern.com/settings)
-
----
+Connect Skyvern to 2,000+ apps through Make. Trigger browser automations from any scenario, or route Skyvern's results into downstream modules.
 
 ## Available Modules
 
-Modules are steps your scenario performs to interact with Skyvern.
+- **Run a Task** — Run an automation using **Skyvern 1.0** (simple, single-step goals)
+- **Run a Task V2** — Run an automation using **Skyvern 2.0** (complex, multi-step goals)
+- **Run a Workflow** — Run a pre-built Skyvern workflow with parameters
+- **Get a Task / Get a Task V2** — Retrieve results from a previously run task
+- **Get a Workflow** — Retrieve results from a previously run workflow
+- **List Organizations** — List all organizations in your account
+- **Make an API Call** — Execute a custom API request with your credentials
 
-| Module | Use this to |
-|--------|-------------|
-| Run a Task | Run an automation using the `skyvern-1.0` engine. Best for simple tasks like filling a form or searching for information. |
-| Run a Task V2 | Run an automation using the `skyvern-2.0` engine. Best for complex, multi-step goals with dynamic planning. |
-| Run a Workflow | Run a pre-built Skyvern workflow with parameters. |
-| Get a Task | Retrieve results from a previously run task (v1). |
-| Get a Task V2 | Retrieve results from a previously run task (v2). |
-| Get a Workflow | Retrieve results from a previously run workflow. |
-| List Organizations | Retrieve a list of all organizations in your account. |
-| Make an API Call | Execute a custom API request using your authorized credentials. |
+## Setup
 
----
+<Steps>
+  <Step title="Add the Skyvern module">
+    Create a new scenario or edit an existing one, click **+**, and search for "Skyvern".
 
-## Step 1: Add the Skyvern module
+    <Frame>
+      <video
+        autoPlay
+        muted
+        loop
+        playsInline
+        className="w-full aspect-video rounded-xl"
+        src="/images/make/make1.mp4"
+      ></video>
+    </Frame>
+  </Step>
 
-1. Create a new scenario or edit an existing one
-2. Click the **+** to add a module and search for "Skyvern"
-3. Select the module you want to use
+  <Step title="Connect your account">
+    Click **Create a connection** and paste your API key from [Settings](https://app.skyvern.com/settings/api-keys).
 
-<video
-  autoPlay
-  muted
-  loop
-  playsInline
-  className="w-full aspect-video rounded-xl"
-  src="/images/make/make1.mp4"
-></video>
+    <Frame>
+      <video
+        autoPlay
+        muted
+        loop
+        playsInline
+        className="w-full aspect-video rounded-xl"
+        src="/images/make/make2.mp4"
+      ></video>
+    </Frame>
+  </Step>
 
----
+  <Step title="Configure">
+    Fill in the fields for your chosen module. See the field reference below.
+  </Step>
 
-## Step 2: Connect your account
+  <Step title="Test">
+    Click **Run once** and monitor progress in your [Skyvern dashboard](https://app.skyvern.com).
+  </Step>
+</Steps>
 
-1. Click **Create a connection**
-2. Enter a name for the connection (optional)
-3. Go to [Settings](https://app.skyvern.com/settings) in Skyvern and copy your API key
-4. Paste your API key and save
-
-<video
-  autoPlay
-  muted
-  loop
-  playsInline
-  className="w-full aspect-video rounded-xl"
-  src="/images/make/make2.mp4"
-></video>
-
----
-
-## Step 3: Set configuration fields
-
-Configuration varies by module type.
+## Field reference
 
 ### Run a Task
 
-Both task modules use the same configuration fields. The difference is the underlying engine:
-
-- **Run a Task** uses `skyvern-1.0` — optimized for simple, single-step goals
-- **Run a Task V2** uses `skyvern-2.0` — uses dynamic planning for complex, multi-step goals
-
-| Field | Required | Description |
-|-------|----------|-------------|
-| URL | Yes | The starting page for the automation. |
-| Navigation Goal | Often | What Skyvern should do on the page. End with "COMPLETE" when done or "TERMINATE" to stop. Omit if only extracting data. |
-| Data Extraction Goal | No | What data to extract after navigation completes. Be specific about what to return. |
-| Navigation Payload | No | JSON object with input data for forms. Use this to run the same task with different data. |
-| Extracted Information Schema | No | JSON schema specifying how extracted data should be formatted. |
-| Webhook Callback URL | No | URL to notify when Skyvern finishes executing. |
-| Max Steps | No | Limit the number of steps to control costs. |
+- **URL** (required) — The starting page for the automation
+- **Navigation Goal** — What Skyvern should do on the page. Omit if only extracting data.
+- **Data Extraction Goal** — What data to pull from the page
+- **Navigation Payload** — JSON input data for forms. Lets you reuse the same task with different data.
+- **Extracted Information Schema** — JSON schema defining the shape of extracted data
+- **Webhook Callback URL** — URL to notify when the task finishes
+- **Max Steps** — Cap the number of steps to control costs
 
 <Note>
-The navigation goal describes what to do *after* loading the URL. Don't include "go to website X" in the navigation goal—use the URL field instead.
+The navigation goal describes what to do *after* loading the URL. Don't include "go to website X" — use the URL field instead.
 </Note>
 
-<img src="/images/make/make3.png" alt="Configure task fields in Make.com" />
+<Frame>
+  <img src="/images/make/make3.png" alt="Configure task fields in Make.com" />
+</Frame>
 
 ### Run a Workflow
 
 First, create your workflow in the [Skyvern UI](https://app.skyvern.com).
 
-| Field | Required | Description |
-|-------|----------|-------------|
-| Workflow | Yes | Select the workflow you want to run from the dropdown. |
-| Parameters | Depends | Fill in any parameters defined in your workflow. Skip if your workflow uses fixed values. |
+- **Workflow** (required) — Select the workflow to run
+- **Parameters** — Fill in any parameters defined in your workflow
 
-<img src="/images/make/make4.png" alt="Configure workflow fields in Make.com" />
+<Frame>
+  <img src="/images/make/make4.png" alt="Configure workflow fields in Make.com" />
+</Frame>
 
 ### Get a Task / Workflow
 
-Use these modules to retrieve the output of a previous run into your scenario. The run must have already completed.
+Retrieve the output of a completed run.
 
-| Field | Required | Description |
-|-------|----------|-------------|
-| Task ID | Yes | The ID of the task run. Starts with `tsk_`. |
-| Workflow Run ID | Yes | The ID of the workflow run. Starts with `wr_`. |
+- **Task ID** (required) — Starts with `tsk_`
+- **Workflow Run ID** (required) — Starts with `wr_`
 
-<img src="/images/make/make5.png" alt="Enter Task ID or Workflow Run ID in Make.com" />
-
----
-
-## Step 4: Test
-
-1. Click the **Run once** button to test your scenario.
-
-2. Monitor progress in your [Skyvern dashboard](https://app.skyvern.com).
-
----
+<Frame>
+  <img src="/images/make/make5.png" alt="Enter Task ID or Workflow Run ID in Make.com" />
+</Frame>
 
 ## Next steps
 
@@ -133,14 +106,14 @@ Use these modules to retrieve the output of a previous run into your scenario. T
   <Card
     title="Build Workflows"
     icon="diagram-project"
-    href="/workflows/manage-workflows"
+    href="/cloud/manage-workflows"
   >
     Create reusable multi-step automations in Skyvern
   </Card>
   <Card
     title="Use Webhooks"
     icon="webhook"
-    href="/running-tasks/webhooks-faq"
+    href="/going-to-production/webhooks"
   >
     Get notified when tasks complete
   </Card>
