--- a/docs/integrations/n8n.mdx
+++ b/docs/integrations/n8n.mdx
@@ -4,107 +4,93 @@ subtitle: Run browser automations in your n8n workflows
 slug: integrations/n8n
 ---
 
-The Skyvern n8n integration lets you connect Skyvern with n8n's open-source workflow automation platform.
-
-Use it to trigger browser automation jobs from other tools, or to send Skyvern results into other apps.
-
----
-
-## What you'll need
-
-- A Skyvern Cloud API key from [Settings](https://app.skyvern.com/settings)
-
----
+Connect Skyvern to n8n's open-source automation platform. Trigger browser automations from any workflow, or pipe Skyvern's results into downstream nodes.
 
 ## Available Operations
 
-Operations are steps your workflow performs to interact with Skyvern.
+- **Task → Dispatch a Task** — Run a browser automation with a prompt
+- **Task → Get a Task** — Retrieve results from a previously run task
+- **Workflow → Dispatch a Workflow Run** — Run a pre-built Skyvern workflow with parameters
+- **Workflow → Get a Workflow Run** — Retrieve results from a previously run workflow
 
-| Resource | Operation | Use this to |
-|----------|-----------|-------------|
-| Task | Dispatch a Task | Run a browser automation with a prompt. Select your engine in Task Options. |
-| Task | Get a Task | Retrieve results from a previously run task. |
-| Workflow | Dispatch a Workflow Run | Run a pre-built Skyvern workflow with parameters. |
-| Workflow | Get a Workflow Run | Retrieve results from a previously run workflow. |
+## Setup
 
----
+<Steps>
+  <Step title="Install the Skyvern node">
+    Create a new workflow or edit an existing one, click **+**, search for "Skyvern", and click *Install* → *Add to workflow*.
 
-## Step 1: Connect the Skyvern node
+    <Frame>
+      <video
+        autoPlay
+        muted
+        loop
+        playsInline
+        className="w-full aspect-video rounded-xl"
+        src="/images/n8n/n8n1.mp4"
+      ></video>
+    </Frame>
+  </Step>
 
-1. Create a new workflow or edit an existing one
-2. Click on + (Add step button) and search for "Skyvern"
-3. Click *Install*
-4. Click *Add to workflow*
-5. Click on *Select credential* and select "Create new credential"
-6. Fill in the Skyvern API from [Settings](https://app.skyvern.com/settings) and save
+  <Step title="Connect your account">
+    Click *Select credential* → "Create new credential" and paste your API key from [Settings](https://app.skyvern.com/settings/api-keys).
+  </Step>
 
-<video
-  autoPlay
-  muted
-  loop
-  playsInline
-  className="w-full aspect-video rounded-xl"
-  src="/images/n8n/n8n1.mp4"
-></video>
+  <Step title="Configure">
+    Fill in the fields for your chosen operation. See the field reference below.
+  </Step>
 
----
+  <Step title="Test">
+    Run the workflow and monitor progress in your [Skyvern dashboard](https://app.skyvern.com).
+  </Step>
+</Steps>
 
-## Step 2: Set configuration fields
-
-Configuration varies by operation.
+## Field reference
 
 ### Dispatch a Task
 
-<img src="/images/n8n/n8n2.png" alt="Configure Dispatch a Task fields in n8n" />
+<Frame>
+  <img src="/images/n8n/n8n2.png" alt="Configure Dispatch a Task fields in n8n" />
+</Frame>
 
-| Field | Required | Description |
-|-------|----------|-------------|
-| User Prompt | Yes | The prompt describing what Skyvern should do. |
-| URL | No | The starting page for the automation. If omitted, Skyvern will navigate based on the prompt. |
-| Webhook Callback URL | No | URL to notify when Skyvern finishes executing. |
+- **User Prompt** (required) — What Skyvern should do
+- **URL** — The starting page. If omitted, Skyvern navigates based on the prompt.
+- **Webhook Callback URL** — URL to notify when the task finishes
 
-**Task Options:**
+Under **Task Options**:
 
-| Option | Description |
-|--------|-------------|
-| Engine | Select the automation engine: `skyvern-1.0` (simple tasks), `skyvern-2.0` (complex multi-step goals), `openai-cua`, or `anthropic-cua`. Defaults to `skyvern-2.0`. |
+- **Engine** — Defaults to **Skyvern 2.0**.
+  - **Skyvern 1.0** — Simple, single-step tasks
+  - **Skyvern 2.0** — Complex, multi-step goals with dynamic planning
+  - **OpenAI CUA** / **Anthropic CUA** — Third-party computer-use agents
 
 ### Dispatch a Workflow Run
 
-<img src="/images/n8n/n8n3.png" alt="Configure Dispatch a Workflow Run fields in n8n" />
+<Frame>
+  <img src="/images/n8n/n8n3.png" alt="Configure Dispatch a Workflow Run fields in n8n" />
+</Frame>
 
 First, create your workflow in the [Skyvern UI](https://app.skyvern.com).
 
-| Field | Required | Description |
-|-------|----------|-------------|
-| Workflow Name or ID | Yes | Select the workflow from the dropdown or specify an ID using an expression. |
-| Workflow Run Parameters | Depends | Parameters are loaded dynamically based on the selected workflow. Fill in any required values. |
-| Webhook Callback URL | No | URL to notify when the workflow run finishes. |
+- **Workflow Name or ID** (required) — Select from the dropdown or specify an ID with an expression
+- **Workflow Run Parameters** — Loaded dynamically from the selected workflow
+- **Webhook Callback URL** — URL to notify when the workflow finishes
 
 ### Get a Task
 
-<img src="/images/n8n/n8n5.png" alt="Enter Task ID field in n8n" />
+<Frame>
+  <img src="/images/n8n/n8n5.png" alt="Enter Task ID field in n8n" />
+</Frame>
 
-| Field | Required | Description |
-|-------|----------|-------------|
-| Task ID | Yes | The ID of the task run. |
+- **Task ID** (required) — The ID of the task run
 
 ### Get a Workflow Run
 
-<img src="/images/n8n/n8n4.png" alt="Enter Workflow Run ID field in n8n" />
+<Frame>
+  <img src="/images/n8n/n8n4.png" alt="Enter Workflow Run ID field in n8n" />
+</Frame>
 
-| Field | Required | Description |
-|-------|----------|-------------|
-| Workflow Name or ID | Yes | Select the workflow from the dropdown. |
-| Workflow Run ID | Yes | The ID of the workflow run. Starts with `wr_`. |
-
----
-
-## Step 5: Test
-
-Execute the workflow to test your configuration. Monitor progress in your [Skyvern dashboard](https://app.skyvern.com).
-
----
+- **Workflow Name or ID** (required) — Select the workflow from the dropdown
+- **Workflow Run ID** (required) — Starts with `wr_`
 
 ## Next steps
 
@@ -112,14 +98,14 @@ Execute the workflow to test your configuration. Monitor progress in your [Skyve
   <Card
     title="Build Workflows"
     icon="diagram-project"
-    href="/workflows/manage-workflows"
+    href="/cloud/manage-workflows"
   >
     Create reusable multi-step automations in Skyvern
   </Card>
   <Card
     title="Use Webhooks"
     icon="webhook"
-    href="/running-tasks/webhooks-faq"
+    href="/going-to-production/webhooks"
   >
     Get notified when tasks complete
   </Card>
