--- a/docs/integrations/mcp.mdx
+++ b/docs/integrations/mcp.mdx
@@ -1,25 +1,32 @@
 ---
 title: MCP Server
-subtitle: Connect AI applications to browser automation via Model Context Protocol
-slug: integrations/mcp
+subtitle: Connect AI assistants to browser automation via Model Context Protocol
+slug: going-to-production/mcp
 ---
 
-The Skyvern MCP server lets you connect AI applications like Claude Desktop, Cursor, and Windsurf to browser automation.
+The Skyvern MCP server lets AI assistants like Claude Desktop, Cursor, and Windsurf control a browser. Your AI can fill out forms, extract data, download files, and run multi-step workflows, all through natural language.
 
-Use it to fill out forms, download files, research information on the web, and more—directly from your AI assistant.
+<Note>
+Requires Python 3.11, 3.12, or 3.13.
+</Note>
 
----
+## What you can do
 
-## What you'll need
+The MCP server exposes 31 tools across 5 categories:
 
-- A local Skyvern deployment, or
-- A Skyvern Cloud API key
+| Category | Key tools | What they do |
+|----------|-----------|--------------|
+| **Session management** | `session_create`, `session_close`, `session_list`, `session_connect` | Open, manage, and reuse browser sessions |
+| **Browser actions** | `act`, `navigate`, `click`, `type`, `scroll`, `select_option`, `press_key`, `wait` | Control the browser with natural language or CSS/XPath selectors |
+| **Data extraction** | `extract`, `screenshot`, `evaluate` | Pull structured data from pages, capture screenshots, run JavaScript |
+| **Validation** | `validate` | Check page conditions using AI (returns true/false) |
+| **Workflows** | `workflow_create`, `workflow_run`, `workflow_status`, `workflow_get`, `workflow_update`, `workflow_delete` | Build and execute multi-step automations |
 
----
+Your AI assistant decides which tools to call based on your instructions. For example, asking "go to Hacker News and get the top post title" triggers `session_create`, `navigate`, `extract`, and `session_close` automatically.
 
-## Option A: Setup Wizard
+## Setup
 
-The interactive wizard configures your MCP client and sets up credentials automatically.
+### Option A: Setup wizard (recommended)
 
 ```bash
 pip install skyvern
@@ -27,15 +34,22 @@ skyvern init
 ```
 
 The wizard will:
-1. Detect your MCP client (Claude Desktop, Cursor, or Windsurf)
-2. Ask whether to use Skyvern Cloud or local mode
-3. Configure your LLM provider and start the server (if local)
+1. Ask whether to use Skyvern Cloud or a local server
+2. Configure your LLM provider (if local)
+3. Detect your MCP clients (Claude Desktop, Cursor, Windsurf)
+4. Write the MCP configuration file for each client automatically
 
----
+<Tip>
+If you chose local mode, start the server before using MCP:
 
-## Option B: Manual Configuration
+```bash
+skyvern run server
+```
+</Tip>
 
-For other MCP-enabled applications, add this to your MCP configuration file:
+### Option B: Manual configuration
+
+Add this to your MCP client's configuration file:
 
 ```json
 {
@@ -45,43 +59,82 @@ For other MCP-enabled applications, add this to your MCP configuration file:
         "SKYVERN_BASE_URL": "https://api.skyvern.com",
         "SKYVERN_API_KEY": "YOUR_SKYVERN_API_KEY"
       },
-      "command": "PATH_TO_PYTHON",
-      "args": [
-        "-m",
-        "skyvern",
-        "run",
-        "mcp"
-      ]
+      "command": "/usr/bin/python3",
+      "args": ["-m", "skyvern", "run", "mcp"]
     }
   }
 }
 ```
 
-For local mode, set `SKYVERN_BASE_URL` to `http://localhost:8000`. Find your local `SKYVERN_API_KEY` in the `.env` file after running `skyvern init`.
+Replace `/usr/bin/python3` with the output of `which python3` on your machine. For local mode, set `SKYVERN_BASE_URL` to `http://localhost:8000` and find your API key in the `.env` file after running `skyvern init`.
 
----
+<Accordion title="Config file locations by client">
+
+| Client | Path |
+|--------|------|
+| **Claude Desktop** (macOS) | `~/Library/Application Support/Claude/claude_desktop_config.json` |
+| **Claude Desktop** (Linux) | `~/.config/Claude/claude_desktop_config.json` |
+| **Cursor** | `~/.cursor/mcp.json` |
+| **Windsurf** | `~/.codeium/windsurf/mcp_config.json` |
+
+</Accordion>
 
 ## See it in action
 
-### Claude Desktop looking up Hacker News
+**Claude Desktop** looking up the top Hacker News posts:
 
 <video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
   <source src="https://github.com/user-attachments/assets/0c10dd96-c6ff-4b99-ad99-f34a5afd04fe" type="video/mp4" />
 </video>
 
-### Cursor finding programming jobs
+**Cursor** finding programming jobs:
 
 <video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
   <source src="https://github.com/user-attachments/assets/084c89c9-6229-4bac-adc9-6ad69b41327d" type="video/mp4" />
 </video>
 
-### Windsurf searching Form 5500 and downloading files
+**Windsurf** searching Form 5500 and downloading files:
 
 <video style={{ aspectRatio: '16 / 9', width: '100%' }} controls>
   <source src="https://github.com/user-attachments/assets/70cfe310-24dc-431a-adde-e72691f198a7" type="video/mp4" />
 </video>
 
----
+## Troubleshooting
+
+<Accordion title="Python version errors">
+The Skyvern MCP server requires Python 3.11, 3.12, or 3.13. Check your version with `python3 --version`. If you have multiple Python versions installed, make sure the `command` in your MCP config points to a supported version:
+
+```bash
+which python3.11
+# Use this path in your MCP config
+```
+
+You can also use `pipx` to install in an isolated environment:
+
+```bash
+pipx install skyvern
+```
+</Accordion>
+
+<Accordion title="Connection refused (local mode)">
+Make sure the Skyvern server is running before using MCP tools:
+
+```bash
+skyvern run server
+```
+
+Confirm the server is reachable at `http://localhost:8000`. If you changed the port, update `SKYVERN_BASE_URL` in your MCP config to match.
+</Accordion>
+
+<Accordion title="MCP client doesn't detect Skyvern">
+Verify that the `command` path in your MCP config is correct:
+
+```bash
+which python3
+```
+
+Use the full absolute path (e.g., `/usr/bin/python3` or `/Users/you/.pyenv/shims/python3`), not just `python3`. Restart your MCP client after editing the config file.
+</Accordion>
 
 ## Next steps
 
