Add Python SDK reference docs with LLM-optimized complete reference
- Add 8 detailed SDK reference pages (overview, tasks, workflows,
  browser-sessions, browser-profiles, credentials, helpers, error-handling)
- Add single-page complete reference for LLM consumption
- Fix ApiError import path (skyvern.client.core, not skyvern.client.errors)
- Fix browser_profiles.create_browser_profile() -> create_browser_profile()
- Fix engine raw string to RunEngine enum in core-concepts
- Add version notices for get_workflow/get_workflow_versions (v1.1.0+)
- Add Python SDK tab to docs.json navigation

--- a/docs/getting-started/core-concepts.mdx
+++ b/docs/getting-started/core-concepts.mdx
@@ -290,7 +290,7 @@ A saved snapshot of browser state. Unlike sessions, profiles persist indefinitel
 
 ```python
 # Create a profile from a completed run
-profile = await skyvern.browser_profiles.create_browser_profile(
+profile = await skyvern.create_browser_profile(
     name="my-authenticated-profile",
     workflow_run_id=run.run_id
 )
@@ -350,10 +350,12 @@ Skyvern supports multiple AI engines for task execution:
 Specify the engine when running a task:
 
 ```python
+from skyvern.schemas.runs import RunEngine
+
 result = await skyvern.run_task(
     prompt="Extract pricing data",
     url="https://example.com",
-    engine="skyvern-2.0"
+    engine=RunEngine.skyvern_v2
 )
 ```
 
